Update admin panel API URL to Render backend